Mark original posters in replies. Make dockerfile to read SECRET_KEY_BASE from env during build time
